namespace.yaml
# namespace.yaml
---
# 0. Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: svd
