frontend.yaml
# 8. lighttpd Deployment + Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: svd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: r1035222/svd-frontend:latest # load with:  kind load docker-image svd-frontend:latest --name svd
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          volumeMounts:
            - name: conf
              mountPath: /etc/lighttpd/lighttpd.conf
              subPath: lighttpd.conf
            - name: html
              mountPath: /var/www/html
      volumes:
        - name: conf
          configMap:
            name: lighttpd-conf
        - name: html
          configMap:
            name: html
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: svd
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 80
